--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,8 @@ body {
 	
 	overflow-x: hidden;
 }
-div.container.panel div {
-	left: -2px;
+.page-center {
+	left: -4px;
 }
 .website{
 	width: 100%;
